--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <html lang="uk">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Студія</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-    rel="stylesheet" />
+    rel="stylesheet">
   <link rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" />
-  <link rel="stylesheet" href="./css/styles.css" />
+    href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
+  <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body class="page">
@@ -33,10 +33,16 @@
       </nav>
       <ul class="contact-nav list">
         <li class="item">
-          <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+          <a href="mailto:info@devstudio.com" class="header-contact link">
+            <svg class="header-icon" width="16" heigth="12">
+              <use href="./images/icons.svg#icon-email"></use>
+            </svg>info@devstudio.com</a>
         </li>
         <li class="item">
-          <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+          <a href="tel:+380961111111" class="header-contact link">
+            <svg class="header-icon" width="10" heigth="16">
+              <use href="./images/icons.svg#icon-smartphone"></use>
+          </svg>+38 096 111 11 11</a>
         </li>
       </ul>
     </div>
@@ -49,12 +55,16 @@
         <button type="button" class="button">Замовити послугу</button>
       </div>
     </section>
-
     <!-- Переваги -->
     <section class="section">
       <div class="container">
         <ul class="features list">
           <li class="features-item">
+            <div class="features-card">
+              <svg class="features-icon">
+                <use href="./images/icons.svg#icon-antenna"></use>
+              </svg>
+            </div>
             <h3 class="features-title">УВАГА ДО ДЕТАЛЕЙ</h3>
             <p class="features-text">
               Ідейні міркування, і навіть початок повсякденної роботи з
@@ -62,6 +72,11 @@
             </p>
           </li>
           <li class="features-item">
+            <div class="features-card">
+              <svg class="features-icon">
+                <use href="./images/icons.svg#icon-clock"></use>
+              </svg>
+            </div>
             <h3 class="features-title">ПУНКТУАЛЬНІСТЬ</h3>
             <p class="features-text">
               Завдання організації, особливо рамки і місце навчання кадрів
@@ -69,12 +84,22 @@
             </p>
           </li>
           <li class="features-item">
+            <div class="features-card">
+              <svg class="features-icon">
+                <use href="./images/icons.svg#icon-diagram"></use>
+              </svg>
+            </div>
             <h3 class="features-title">ПЛАНУВАННЯ</h3>
             <p class="features-text">
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
           <li class="features-item">
+            <div class="features-card">
+              <svg class="features-icon">
+                <use href="./images/icons.svg#icon-astronaut"></use>
+              </svg>
+            </div>
             <h3 class="features-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
             <p class="features-text">
               Значимість цих проблем настільки очевидна, що реалізація
@@ -90,13 +115,13 @@
         <h2 class="section-title work">Чим ми займаємося</h2>
         <ul class="list example">
           <li>
-            <img src="./images/example-1.jpg" alt="Створення сайту" width="370" height="294" />
+            <img src="./images/example-1.jpg" alt="Створення сайту" width="370" height="294">
           </li>
           <li>
-            <img src="./images/example-2.jpg" alt="Адаптація сайту" width="370" height="294" />
+            <img src="./images/example-2.jpg" alt="Адаптація сайту" width="370" height="294">
           </li>
           <li>
-            <img src="./images/example-3.jpg" alt="Дизайн" width="370" height="294" />
+            <img src="./images/example-3.jpg" alt="Дизайн" width="370" height="294">
           </li>
         </ul>
       </div>
@@ -106,33 +131,203 @@
       <div class="container">
         <h2 class="section-title team">Наша команда</h2>
         <ul class="team-list list">
-          <li>
-            <img src="./images/pd.jpg" alt="Продакт дизайнер" width="270" />
+          <li class="team-card">
+            <img src="./images/pd.jpg" alt="Продакт дизайнер" width="270">
             <div class="team-description">
               <h3 class="team-title">Ігор Дем'яненко</h3>
               <p class="team-text">Product Designer</p>
+              <ul class="team-social list">
+                <li class="social-item">
+                  <a href="" class="social-link">
+                    <svg class="team-icon">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-item">
+                  <a href="" class="social-link">
+                    <svg class="team-icon">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-item">
+                  <a href="" class="social-link">
+                    <svg class="team-icon">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-item">
+                  <a href="" class="social-link">
+                    <svg class="team-icon">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </div>
           </li>
-          <li>
-            <img src="./images/fd.jpg" alt="Фронтенд девелопер" width="270" />
+          <li class="team-card">
+            <img src="./images/fd.jpg" alt="Фронтенд девелопер" width="270">
             <div class="team-description">
               <h3 class="team-title">Ольга Рєпіна</h3>
               <p class="team-text">Frontend Developer</p>
+              <ul class="team-social list">
+                <li class="social-item">
+                  <a href="" class="social-link">
+                    <svg class="team-icon">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-item">
+                  <a href="" class="social-link">
+                    <svg class="team-icon">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-item">
+                  <a href="" class="social-link">
+                    <svg class="team-icon">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-item">
+                  <a href="" class="social-link">
+                    <svg class="team-icon">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </div>
           </li>
-          <li>
-            <img src="./images/m.jpg" alt="Маркетинг" width="270" />
+          <li class="team-card">
+            <img src="./images/m.jpg" alt="Маркетинг" width="270">
             <div class="team-description">
               <h3 class="team-title">Микола Тарасов</h3>
               <p class="team-text">Marketing</p>
+              <ul class="team-social list">
+                <li class="social-item">
+                  <a href="" class="social-link">
+                    <svg class="team-icon">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-item">
+                  <a href="" class="social-link">
+                    <svg class="team-icon">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-item">
+                  <a href="" class="social-link">
+                    <svg class="team-icon">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-item">
+                  <a href="" class="social-link">
+                    <svg class="team-icon">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </div>
           </li>
-          <li>
-            <img src="./images/uid.jpg" alt="Графічний дизайнер" width="270" />
+          <li class="team-card">
+            <img src="./images/uid.jpg" alt="Графічний дизайнер" width="270">
             <div class="team-description">
               <h3 class="team-title">Михайло Єрмаков</h3>
               <p class="team-text">UI Designer</p>
+              <ul class="team-social list">
+                <li class="social-item">
+                  <a href="" class="social-link">
+                    <svg class="team-icon">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-item">
+                  <a href="" class="social-link">
+                    <svg class="team-icon">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-item">
+                  <a href="" class="social-link">
+                    <svg class="team-icon">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-item">
+                  <a href="" class="social-link">
+                    <svg class="team-icon">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </div>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <!-- Клієнти -->
+    <section class="section">
+      <div class="container">
+        <h2 class="section-title">Постійні клієнти</h2>
+        <ul class="clients-list list">
+          <li class="clients-item">
+            <a href="" class="clients-link">
+              <svg class="clients-icon">
+                <use href="./images/icons.svg#icon-Client-1"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="clients-item">
+            <a href="" class="clients-link">
+              <svg class="clients-icon">
+                <use href="./images/icons.svg#icon-Client-2"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="clients-item">
+            <a href="" class="clients-link">
+              <svg class="clients-icon">
+                <use href="./images/icons.svg#icon-Client-3"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="clients-item">
+            <a href="" class="clients-link">
+              <svg class="clients-icon">
+                <use href="./images/icons.svg#icon-Client-4"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="clients-item">
+            <a href="" class="clients-link">
+              <svg class="clients-icon">
+                <use href="./images/icons.svg#icon-Client-5"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="clients-item">
+            <a href="" class="clients-link">
+              <svg class="clients-icon">
+                <use href="./images/icons.svg#icon-Client-6"></use>
+              </svg>
+            </a>
           </li>
         </ul>
       </div>
@@ -140,25 +335,59 @@
   </main>
   <!-- Футер -->
   <footer class="footer">
-    <div class="container">
-      <div class="footer-logo">
-        <a href="./index.html" class="logo">Web<span class="footer-accent">Studio</span></a>
+    <div class="footer-container container">
+      <div>
+        <div class="footer-logo">
+          <a href="./index.html" class="logo">Web<span class="footer-accent">Studio</span></a>
+        </div>
+        <address class="footer-adress link">
+          <ul class="footer-list list">
+            <li>
+              <a href="" class="footer-adress link">м. Київ, пр-т Лесі Українки, 26</a>
+            </li>
+            <li>
+              <a href="mailto:info@devstudio.com" class="footer-contact mail link">info@devstudio.com</a>
+            </li>
+            <li>
+              <a href="tel:+380961111111" class="footer-contact link">+38 096 111 11 11</a>
+            </li>
+          </ul>
+        </address>
       </div>
-      <address class="footer-adress link">
-        <ul class="footer-list list">
-          <li>
-            <a href="" class="footer-adress link">м. Київ, пр-т Лесі Українки, 26</a>
+      <div class="footer-social">
+        <h2 class="footer-title">приєднуйтесь</h2>
+        <ul class="footer-social-list list">
+          <li class="social-item">
+            <a href="" class="footer-social-link">
+              <svg class="footer-icon">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
           </li>
-          <li>
-            <a href="mailto:info@devstudio.com" class="footer-contact mail link">info@devstudio.com</a>
+          <li class="social-item">
+            <a href="" class="footer-social-link">
+              <svg class="footer-icon">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
           </li>
-          <li>
-            <a href="tel:+380961111111" class="footer-contact link">+38 096 111 11 11</a>
+          <li class="social-item">
+            <a href="" class="footer-social-link">
+              <svg class="footer-icon">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-item">
+            <a href="" class="footer-social-link">
+              <svg class="footer-icon">
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg>
+            </a>
           </li>
         </ul>
-      </address>
+      </div>
     </div>
   </footer>
 </body>
-
 </html>
