--- a/portfolio.html
+++ b/portfolio.html
@@ -2,17 +2,17 @@
 <html lang="uk">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Портфоліо</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-    rel="stylesheet" />
+    rel="stylesheet">
   <link rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" />
-  <link rel="stylesheet" href="./css/styles.css" />
+    href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
+  <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body class="page">
@@ -33,14 +33,21 @@
       </nav>
       <ul class="contact-nav list">
         <li class="item">
-          <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+          <a href="mailto:info@devstudio.com" class="header-contact link">
+            <svg class="header-icon" width="16" heigth="12">
+              <use href="./images/icons.svg#icon-email"></use>
+            </svg>info@devstudio.com</a>
         </li>
         <li class="item">
-          <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+          <a href="tel:+380961111111" class="header-contact link">
+            <svg class="header-icon" width="10" heigth="16">
+              <use href="./images/icons.svg#icon-smartphone"></use>
+          </svg>+38 096 111 11 11</a>
         </li>
       </ul>
     </div>
   </header>
+  
   <main>
     <section class="section">
       <div class="container">
@@ -55,7 +62,7 @@
         <ul class="portfolio-cards list">
           <li class="card-item">
             <a href="" class="card-link">
-              <img src="./images/port-1.jpg" alt="Сайт на моніторі" width="370" height="294" />
+              <img src="./images/port-1.jpg" alt="Сайт на моніторі" width="370" height="294">
               <div class="description">
                 <h2 class="card-title">Технокряк</h2>
                 <p class="card-text">Веб-сайт</p>
@@ -64,7 +71,7 @@
           </li>
           <li class="card-item">
             <a href="" class="card-link">
-              <img src="./images/port-2.jpg" alt="Постер баскетбол" width="370" height="294" />
+              <img src="./images/port-2.jpg" alt="Постер баскетбол" width="370" height="294">
               <div class="description">
                 <h2 class="card-title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
                 <p class="card-text">Дизайн</p>
@@ -73,7 +80,7 @@
           </li>
           <li class="card-item">
             <a href="" class="card-link">
-              <img src="./images/port-3.jpg" alt="Логотип ресторану" width="370" height="294" />
+              <img src="./images/port-3.jpg" alt="Логотип ресторану" width="370" height="294">
               <div class="description">
                 <h2 class="card-title">Ресторан <span lang="en">Seafood</span></h2>
                 <p class="card-text">Додаток</p>
@@ -82,7 +89,7 @@
           </li>
           <li class="card-item">
             <a href="" class="card-link">
-              <img src="./images/port-4.jpg" alt="Навушники" width="370" height="294" />
+              <img src="./images/port-4.jpg" alt="Навушники" width="370" height="294">
               <div class="description">
                 <h2 class="card-title">Проєкт <span lang="en">Prime</span></h2>
                 <p class="card-text">Маркетинг</p>
@@ -91,7 +98,7 @@
           </li>
           <li class="card-item">
             <a href="" class="card-link">
-              <img src="./images/port-5.jpg" alt="Коробки" width="370" height="294" />
+              <img src="./images/port-5.jpg" alt="Коробки" width="370" height="294">
               <div class="description">
                 <h2 class="card-title">Проєкт <span lang="en">Boxes</span></h2>
                 <p class="card-text">Додаток</p>
@@ -100,7 +107,7 @@
           </li>
           <li class="card-item">
             <a href="" class="card-link">
-              <img src="./images/port-6.jpg" alt="Сайт в моноблоці" width="370" height="294" />
+              <img src="./images/port-6.jpg" alt="Сайт в моноблоці" width="370" height="294">
               <div class="description">
                 <h2 class="card-title"><span lang="en">Inspiration has no Borders</span></h2>
                 <p class="card-text">Веб-сайт</p>
@@ -109,7 +116,7 @@
           </li>
           <li class="card-item">
             <a href="" class="card-link">
-              <img src="./images/port-7.jpg" alt="Книжка" width="370" height="294" />
+              <img src="./images/port-7.jpg" alt="Книжка" width="370" height="294">
               <div class="description">
                 <h2 class="card-title">Видання <span lang="en">Limited Edition</span></h2>
                 <p class="card-text">Дизайн</p>
@@ -118,7 +125,7 @@
           </li>
           <li class="card-item">
             <a href="" class="card-link">
-              <img src="./images/port-8.jpg" alt="Бірка" width="370" height="294" />
+              <img src="./images/port-8.jpg" alt="Бірка" width="370" height="294">
               <div class="description">
                 <h2 class="card-title">Проєкт <span lang="en">LAB</span></h2>
                 <p class="card-text">Маркетинг</p>
@@ -127,7 +134,7 @@
           </li>
           <li class="card-item">
             <a href="" class="card-link">
-              <img src="./images/port-9.jpg" alt="Робочий процес за ноутбуком" width="370" height="294" />
+              <img src="./images/port-9.jpg" alt="Робочий процес за ноутбуком" width="370" height="294">
               <div class="description">
                 <h2 class="card-title"><span lang="en">Growing Business</span></h2>
                 <p class="card-text">Додаток</p>
@@ -140,23 +147,58 @@
   </main>
   <!-- Футер -->
   <footer class="footer">
-    <div class="container">
-      <div class="footer-logo">
-        <a href="./index.html" class="logo">Web<span class="footer-accent">Studio</span></a>
+    <div class="footer-container container">
+      <div>
+        <div class="footer-logo">
+          <a href="./index.html" class="logo">Web<span class="footer-accent">Studio</span></a>
+        </div>
+        <address class="footer-adress link">
+          <ul class="footer-list list">
+            <li>
+              <a href="" class="footer-adress link">м. Київ, пр-т Лесі Українки, 26</a>
+            </li>
+            <li>
+              <a href="mailto:info@devstudio.com" class="footer-contact mail link">info@devstudio.com</a>
+            </li>
+            <li>
+              <a href="tel:+380961111111" class="footer-contact link">+38 096 111 11 11</a>
+            </li>
+          </ul>
+        </address>
       </div>
-      <address class="footer-adress link">
-        <ul class="footer-list list">
-          <li>
-            <a href="" class="footer-adress link">м. Київ, пр-т Лесі Українки, 26</a>
+      <div class="footer-social">
+        <h2 class="footer-title">приєднуйтесь</h2>
+        <ul class="footer-social-list list">
+          <li class="social-item">
+            <a href="" class="footer-social-link">
+              <svg class="footer-icon">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
           </li>
-          <li>
-            <a href="mailto:info@devstudio.com" class="footer-contact mail link">info@devstudio.com</a>
+          <li class="social-item">
+            <a href="" class="footer-social-link">
+              <svg class="footer-icon">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
           </li>
-          <li>
-            <a href="tel:+380961111111" class="footer-contact link">+38 096 111 11 11</a>
+          <li class="social-item">
+            <a href="" class="footer-social-link">
+              <svg class="footer-icon">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-item">
+            <a href="" class="footer-social-link">
+              <svg class="footer-icon">
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg>
+            </a>
           </li>
         </ul>
-      </address>
+      </div>
     </div>
   </footer>
 </body>
