--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
       <ul class="contact-nav list">
         <li class="item">
           <a href="mailto:info@devstudio.com" class="header-contact link">
-            <svg class="header-icon" width="16" heigth="12">
+            <svg class="header-icon" width="16" height="12">
               <use href="./images/icons.svg#icon-email"></use>
             </svg>info@devstudio.com</a>
         </li>
         <li class="item">
           <a href="tel:+380961111111" class="header-contact link">
-            <svg class="header-icon" width="10" heigth="16">
+            <svg class="header-icon" width="10" height="16">
               <use href="./images/icons.svg#icon-smartphone"></use>
           </svg>+38 096 111 11 11</a>
         </li>
